Resolved whitespace issue between list elements

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+
+/***********************************************************************/
+/****************************** HEADER SECTION ************************/
+/*********************************************************************/
+
 div.topnav {
     margin-top: 5px;
 }
@@ -114,13 +119,15 @@ input.searchbar {
 }
 
 
+/**********************************************************************************/
+/****************************** NAVIGATION BAR(s) SECTION ************************/
+/********************************************************************************/
 div.navbar {
     display: flex;
     align-items: center;
     background-color: #00008b;
     color: white;
-    width: 98%;
-    margin-left: 20px;
+    width: 100%;
     font-size: 20px;
     font-family: sans-serif;
 }
@@ -146,17 +153,64 @@ ul li {
 ul li:hover {
     background-color: red;
 }
+li.empty {
+    width: 20px;
+    padding-left: 0;
+    padding-right: 0;
+}
+li.empty:hover {
+    background: none;
+}
 
+/**************************************************************/
+/************** BOTTOM NAVBAR SECTION ************************/
+/************************************************************/
+div.bnav {
+    display: flex;
+    align-items: left;
+    background-color: #003F87;
+    color: white;
+    width: 100%;
+    font-size: 14px;
+    font-family: sans-serif;
+}
+div.bnav nav {
+    border-top: 1px solid #6183A6;
+}
+div.bnav ul li {
+    padding: 8px 5px 6px 10px;
+    border-right: 2px solid #6183A6;
+    width: 150px;
+}
+.bnav ul li.lempty {
+    width: 20px;
+    border-right: none !important;
+    padding: 10px 0;
+}
+.bnav ul li.lempty:hover {
+    background: none;
+}
 
+/*******************************************************************************/
+/****************************** HOMEPAGE IMAGE SECTION ************************/
+/*****************************************************************************/
 img.team {
     margin-left: 20px;
     margin-top: 5px;
 }
 
 
+/********************************************************************************/
+/****************************** HOMEPAGE PLACES SECTION ************************/
+/******************************************************************************/
 div.locations {
     margin-top: 40px;
 }
+
+
+/***********************************************************************/
+/****************************** SLIDER SECTION ************************/
+/*********************************************************************/
 div.slides p {
     margin: 0;
     padding: 0;
@@ -204,6 +258,9 @@ div.slides p {
 }
 
 
+/******************************************************************************/
+/****************************** HOMEPAGE NEWS SECTION ************************/
+/****************************************************************************/
 div.news {
     margin-top: 40px;
     margin-left: 20px;
@@ -238,6 +295,9 @@ div.rowathon {
 }
 
 
+/*******************************************************************************/
+/****************************** HOMEPAGE STORY SECTION ************************/
+/*****************************************************************************/
 div.story {
     width: 98%;
     margin-left: 20px;
@@ -268,10 +328,12 @@ div.elder {
 }
 
 
+/***********************************************************************/
+/****************************** FOOTER SECTION ************************/
+/*********************************************************************/
 div.footer {
-    width: 98%;
+    width: 100%;
     height: 60px;
-    margin-left: 20px;
     background-color: #00008b;
     margin-top: 5px;
 }
@@ -281,6 +343,7 @@ div.leftcontent {
     text-align: left;
     padding-left: 3px;
     justify-content: space-around;
+    padding-left: 20px;
 }
 div.rightcontent {
     float: left;
@@ -288,6 +351,7 @@ div.rightcontent {
     text-align: right;
     padding-right: 3px;
     justify-content: space-around;
+    padding-right: 30px;
 }
 a {
     text-decoration: none;
@@ -297,3 +361,8 @@ a {
 .leftcontent p, .rightcontent p {
     margin-bottom: 2px;
 }
+
+
+/***************************************************************************/
+/****************************** ABOUT PAGE SECTION ************************/
+/*************************************************************************/
